# PCO_labo

./: README.md
pco-synchro/: .gitignore  Doxyfile  README.md
pco-synchro/lib/pcosynchro/: CMakeLists.txt  pcosynchro.pro
pco-synchro/src/: pcoconditionvariable.cpp  pcoconditionvariable.h  pcohoaremonitor.cpp  pcohoaremonitor.h  pcologger.cpp  pcologger.h  pcomanager.cpp  pcomanager.h  pcomutex.cpp  pcomutex.h  pcosemaphore.cpp  pcosemaphore.h  pcotest.h  pcothread.cpp  pcothread.h
pco-synchro/test/: CMakeLists.txt  PcoSynchroTests.pro  main.cpp
pco25_lab01/: CMakeCache.txt  Makefile  cmake_install.cmake  rendu.md
pco25_lab01/counter/: Makefile  PCO_lab01_counter  cmake_install.cmake  mythread.cpp
pco25_lab01/counter/PCO_lab01_counter_autogen/: deps  moc_predefs.h
pco25_lab01/counter/PCO_lab01_counter_autogen/EWIEGA46WW/: moc_dialog.cpp  moc_dialog.cpp.d
pco25_lab01/counter/PCO_lab01_counter_autogen/include/: ui_dialog.h
pco25_lab01/interlacement/: CMakeCache.txt  Makefile  PCO_lab01_interlacement  cmake_install.cmake  main.cpp
pco25_lab01/order/: CMakeCache.txt  Makefile  PCO_lab01_order  cmake_install.cmake  main.cpp
pco25_lab01/timestamps/: CMakeCache.txt  Makefile  PCO_lab01_timestamps  cmake_install.cmake  main.cpp
pco25_lab02/: .gitignore  CMakeLists.txt  pco_rendu.sh  rapport.md
pco25_lab02/common/: CMakeLists.txt  logging.cpp  logging.h  primenumberdetector.cpp  primenumberdetector.h
pco25_lab02/main_bench/: CMakeLists.txt  main_benchmark.cpp
pco25_lab03/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  pco_hospital  unit_tests
pco25_lab03/include/: ambulance.h  clinic.h  hospital.h  insurance.h  seller.h  supplier.h
pco25_lab03/src/: ambulance.cpp  clinic.cpp  hospital.cpp  insurance.cpp  main.cpp  seller.cpp  supplier.cpp  utils.cpp
pco25_lab04/: TODO.md  rapport.md
pco25_lab04/code/src/: cppmain.cpp  locomotive.h  locomotivebehavior.cpp  locomotivebehavior.h  sharedsection.h  sharedsectioninterface.h
pco25_lab04/code/tests/: fake_locomotive.h  main.cpp
pco25_lab05/: CMakeLists.txt  pco_rendu.sh  velo.qrc
pco25_lab05/include/: bike.h  bikestation.h  bikinginterface.h  config.h  display.h  mainwindow.h  person.h  van.h
pco25_lab05/src/: bikestation.cpp  bikinginterface.cpp  display.cpp  main.cpp  mainwindow.cpp  person.cpp  van.cpp
rendu/common/: ._primenumberdetector.cpp
